ontol/ontol-compiler/test-cases/error/union/contains_field_and_unit_member.on
def U (
    rel* 'field': text
    rel* is?: M // ERROR unit type `M` cannot be part of a union
)
def M ()
